# geometric_representation_learning

./: .claudeignore  .env  .gitignore  INSTRUCTIONS.md  REFACTORING_PLAN.md  TODO_INTEGRATION_PLAN.md  ToDo.md  pyproject.toml  requirements.txt
Dataset/: add_point_features.py  make_primitives.py
Dataset/Primitives/: ellipse.vtp  pyramid.vtp  sphere.vtp
Dataset/Primitives - Copy/: ellipse.vtp
Dataset/Primitives_computed_!/: ellipse.vtp  pyramid.vtp  sphere.vtp
Training_Analytics_drop_0.9/vtk/: input_graph_shape0_step1.vtp  input_graph_shape1_step1.vtp  input_graph_shape2_step1.vtp  input_graph_shape3_step1.vtp  pred_shape0_step1.vtp  pred_shape1_step1.vtp  pred_shape2_step1.vtp  pred_shape3_step1.vtp  supergraph_shape0_step1.vtp  supergraph_shape1_step1.vtp  supergraph_shape2_step1.vtp  supergraph_shape3_step1.vtp  true_verts_shape0_step1.vtp  true_verts_shape1_step1.vtp  true_verts_shape2_step1.vtp  true_verts_shape3_step1.vtp
config/: config_fields.py  factories.py  irreps.py  models.py  registry.py  resolve.py
configs/: baseline.yaml
configs/ablations/: ae_frobenius.yaml
geometric_representation_learning.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
graphify-out/: .graphify_analysis.json  .graphify_ast.json  .graphify_detect.json  .graphify_extract.json  .graphify_labels.json  .graphify_python  .graphify_root  GRAPH_REPORT.md  graph.html  graph.json  manifest.json
graphify-out/2026-07-06/: manifest.json
graphify-out/2026-07-07/: .graphify_analysis.json  GRAPH_REPORT.md  manifest.json
graphify-out/cache/: stat-index.json
results/: surface_test_20260713_184800.json  surface_test_20260713_185103.json  surface_test_20260713_190202.json
scripts/: equivariant_gnn_train.py  noisify_test.py  perceiver_train.py  surface_classification_test.py  test_encoder_decoder.py  test_group_equivariant_train.py  train.py
src/: paths.py
src/geometry/: geometry_np.py
src/graphs/: builders.py  graphs.py
src/learning/: factories.py  helpers.py  registry.py  runner.py
src/learning/callbacks/: base.py  checkpointing.py  (+4 more)
src/preprocessing/: __init__.py  mesh_from_points.py  surface_measure.py
src/transforms/: group_transforms.py  padding.py
src/vtk/: convert.py  create.py  extract.py  fields.py  io.py  process.py
surface_classification/vtk/: input_graph_shape0_step0.vtp  input_graph_shape0_step10.vtp  input_graph_shape1_step0.vtp  input_graph_shape1_step10.vtp  input_graph_shape2_step0.vtp  input_graph_shape2_step10.vtp  input_graph_shape3_step0.vtp  input_graph_shape3_step10.vtp  supergraph_shape0_step0.vtp  supergraph_shape0_step10.vtp  supergraph_shape1_step0.vtp  supergraph_shape1_step10.vtp  supergraph_shape2_step0.vtp  supergraph_shape2_step10.vtp  supergraph_shape3_step0.vtp  supergraph_shape3_step10.vtp
tests/characterization/: baseline_expected.json  test_baseline.py
tests/config/: test_config_fields.py
tests/data/: nose_2.vtp  nose_3.vtp  sample_01.vtp  shape_4.vtp
tests/graphs/: test_graphs.py  test_supernodes.py
tests/group_transforms/: test_group_transforms.py
tests/learning/: test_callbacks.py  test_composer.py  test_encoder_equivariance.py  test_equivariant.py  test_equivariant_modules.py  test_latent_heads.py  test_logger.py  test_losses.py  test_losses_new.py  test_models.py  test_registry.py  test_trainer_e2e.py  test_trainers.py  test_validation.py
tests/output_data/: 1_th_graph_samples_20.vtp  graph_0_full.vtp  graph_0_supernodes.vtp  graph_1_full.vtp  graph_1_supernodes.vtp
training_logs/: init_graph_0.vtp  init_graph_1.vtp  init_graph_2.vtp  init_graph_3.vtp
(+890 files in other folders)
